@@ -27,8 +27,10 @@ import org.pushingpixels.substance.api.SubstanceColorScheme;
 import org.pushingpixels.substance.api.SubstanceColorSchemeBundle;
 import org.pushingpixels.substance.api.SubstanceSkin;
 import org.pushingpixels.substance.api.colorscheme.BaseDarkColorScheme;
+import org.pushingpixels.substance.api.painter.border.ClassicBorderPainter;
 import org.pushingpixels.substance.api.painter.border.GlassBorderPainter;
 import org.pushingpixels.substance.api.painter.decoration.MatteDecorationPainter;
+import org.pushingpixels.substance.api.painter.fill.ClassicFillPainter;
 import org.pushingpixels.substance.api.painter.fill.GlassFillPainter;
 import org.pushingpixels.substance.api.painter.highlight.ClassicHighlightPainter;
 import org.pushingpixels.substance.api.shaper.ClassicButtonShaper;
@@ -171,15 +173,15 @@ public final class SubstanceATunesGraySkin extends SubstanceSkin {
 		this.registerDecorationAreaSchemeBundle(specialSchemeBundle,
 				DecorationAreaType.PRIMARY_TITLE_PANE,
 				DecorationAreaType.SECONDARY_TITLE_PANE,
-				DecorationAreaType.TOOLBAR, DecorationAreaType.FOOTER,
+				DecorationAreaType.FOOTER,
 				DecorationAreaType.HEADER, DecorationAreaType.GENERAL);
 
+		
 		this.buttonShaper = new ClassicButtonShaper();
-		this.watermark = new SubstanceNullWatermark();
-		this.fillPainter = new GlassFillPainter();
+		this.fillPainter = new ClassicFillPainter();
+		this.borderPainter = new ClassicBorderPainter();
 		this.decorationPainter = new MatteDecorationPainter();
 		this.highlightPainter = new ClassicHighlightPainter();
-		this.borderPainter = new GlassBorderPainter();
 
 	}
 
