@@ -20,6 +20,9 @@
 
 package net.sourceforge.atunes.gui.views.bars;
 
+import java.awt.Dimension;
+
+import javax.swing.ButtonGroup;
 import javax.swing.JButton;
 import javax.swing.JToggleButton;
 import javax.swing.JToolBar;
@@ -28,21 +31,22 @@ import net.sourceforge.atunes.gui.views.panels.ToolBarFilterPanel;
 import net.sourceforge.atunes.kernel.actions.Actions;
 import net.sourceforge.atunes.kernel.actions.CustomSearchAction;
 import net.sourceforge.atunes.kernel.actions.EditPreferencesAction;
-import net.sourceforge.atunes.kernel.actions.RefreshRepositoryAction;
 import net.sourceforge.atunes.kernel.actions.RipCDAction;
-import net.sourceforge.atunes.kernel.actions.SelectRepositoryAction;
 import net.sourceforge.atunes.kernel.actions.ShowAudioObjectPropertiesAction;
 import net.sourceforge.atunes.kernel.actions.ShowContextAction;
 import net.sourceforge.atunes.kernel.actions.ShowNavigationTableAction;
 import net.sourceforge.atunes.kernel.actions.ShowNavigationTreeAction;
 import net.sourceforge.atunes.kernel.actions.ShowStatsAction;
+import net.sourceforge.atunes.kernel.modules.navigator.AbstractNavigationView;
+import net.sourceforge.atunes.kernel.modules.navigator.NavigationHandler;
+import net.sourceforge.atunes.kernel.modules.state.ApplicationState;
 
 public final class ToolBar extends JToolBar {
 
     private static final long serialVersionUID = 3146746580753998589L;
 
-    private JButton selectRepository;
-    private JButton refreshRepository;
+    private static final Dimension SEPARATOR = new Dimension(10, 0);
+    
     private JButton preferences;
     private JToggleButton showNavigationTree;
     private JToggleButton showNavigationTable;
@@ -66,13 +70,15 @@ public final class ToolBar extends JToolBar {
      * Sets the buttons.
      */
     private void setButtons() {
-        selectRepository = new JButton(Actions.getAction(SelectRepositoryAction.class));
-        selectRepository.setText(null);
-        add(selectRepository);
-
-        refreshRepository = new JButton(Actions.getAction(RefreshRepositoryAction.class));
-        refreshRepository.setText(null);
-        add(refreshRepository);
+        // Add dinamically actions to show each navigation view loaded, then select the last navigation view
+    	ButtonGroup group = new ButtonGroup();
+        for (AbstractNavigationView navigationView : NavigationHandler.getInstance().getNavigationViews()) {
+        	JToggleButton button = new JToggleButton(navigationView.getActionToShowView(-1));
+        	button.setText(null);
+        	button.setSelected(navigationView.getClass().getName().equals(ApplicationState.getInstance().getNavigationView()));
+        	group.add(button);
+            add(button);            
+        }
 
         addSeparator();
 
@@ -118,7 +124,11 @@ public final class ToolBar extends JToolBar {
 
         filterPanel = new ToolBarFilterPanel();
         add(filterPanel);
-
+    }
+    
+    @Override
+    public void addSeparator() {
+    	super.addSeparator(SEPARATOR);
     }
 
     public JToggleButton getShowNavigationTree() {
