@@ -98,8 +98,6 @@ public enum Preferences {
 	SHOW_FAVORITES_IN_NAVIGATOR, 
 	SHOW_NAVIGATION_TABLE,
 	SHOW_NAVIGATION_TREE, 
-	SHOW_NAVIGATOR_TABS_AT_LEFT, 
-	SHOW_NAVIGATOR_TABS_TEXT, 
 	SHOW_OSD, 
 	SHOW_PLAYLIST_CONTROLS, 
 	SHOW_STATUS_BAR, 
