@@ -11,6 +11,7 @@ aTunes 2.1.0
 - Visual improvements
 - Removed multiple view
 - Option to show/hide advanced player controls (karaoke, normalization)
+- Moved navigation views buttons to tool bar instead of tabbed pane
 - FIX: Exception during renaming of file name
 - FIX: Repository refresh never ends in certain situations [3024433]
 - FIX: Selected playlist element not saved when closing application
